# cuda_practice

./: CMakeLists.txt  README.md  make_tags.sh  test.sh
cmake/: JetsonToolchain.cmake
src/: classifier.cu  convolution.h  cuda_hog.h  cuda_sort.h  main.cu  tensor.cu  tensor.h
test/: test_convolution.cu  test_cuda_hog.cu  test_cuda_sort.cu  test_tensor.cu
